--- a/index.html
+++ b/index.html
@@ -165,13 +165,13 @@
 
               <g class="education-stop" x="706.327" y="266.818">
                 <a xlink:href="#openupr-rp" >
-                  <circle id="upr-rp" class="click" cx="706.327" cy="266.818" r="25" stroke="black" stroke-width="7" fill="white" />
+                  <image id="upr-rp" x="672.157" y="248.817" xlink:href="./resources/images/UPRR-Stop.png" width="60" height="60" />
                 </a>
               </g>
 
               <g class="education-stop" x="797.53" y="278.647">
-                <a xlink:href="#openPractica" >
-                  <circle id="pd-uprrp" class="click" cx="797.53" cy="278.647" r="5" stroke="black" stroke-width="7" fill="white" />
+                <a xlink:href="" >
+                  <circle id="propuestas-uprrp" class="click" cx="797.53" cy="278.647" r="5" stroke="black" stroke-width="7" fill="white" />
                 </a>
               </g>
 
@@ -183,7 +183,7 @@
 
               <g class="education-stop" x="1033.831" y="277.218">
                 <a xlink:href="#openSagrado">
-                  <circle id="sagrado" class="click" cx="1033.831" cy="277.218" r="25" stroke="black" stroke-width="7" fill="white" />
+                  <image id="sagrado" x="1010.109" y="248.817" xlink:href="./resources/images/Sagrado-Stop.png" width="60" height="60" />
                 </a>
               </g>
 
@@ -221,7 +221,7 @@
 
               <g class="education-stop" x="1759.934" y="487.908">
                 <a xlink:href="#" >
-                  <circle id="scsu" class="click" cx="1759.934" cy="487.908" r="20" stroke="black" stroke-width="7" fill="white" />
+                  <image id="scsu" x="1730.399" y="460.462" xlink:href="./resources/images/SCSU-Stop.png" width="50" height="50" />
                 </a>
               </g>
 
@@ -284,14 +284,14 @@
               </g>
 
               <g class="job-stop" x="797.53" y="489.014">
-                <a xlink:href="" >
+                <a xlink:href="#openPractica" >
                   <circle id="practica" class="click" cx="797.53" cy="489.014" r="5" stroke="black" stroke-width="7" fill="white" />
                 </a>
               </g>
 
               <g class="job-stop" x="847.512" y="489.014">
                 <a xlink:href="#openDE1" >
-                  <circle id="de1" class="click" cx="847.512" cy="489.014" r="25" stroke="black" stroke-width="7" fill="white" />
+                  <image id="de-1" x="817.977" y="460.82" xlink:href="./resources/images/DE-Stop.png" width="60" height="60" />
                 </a>
               </g>
 
@@ -365,7 +365,7 @@
 
               <g class="job-stop" x="2071.468" y="276.011">
                 <a xlink:href="#" >
-                  <circle id="kenan-flagler" class="click" cx="2071.468" cy="276.011" r="20" stroke="black" stroke-width="7" fill="white" />
+                  <image id="kenan-flagler" x="2046.447" y="251.011" xlink:href="./resources/images/UNC-Stop.png" width="50" height="50" />
                 </a>
               </g>
 
@@ -580,7 +580,7 @@
               </g>
 
               <g class="tooltip" x="2202.774" y="605.956">
-                <a xlink:href="#" >
+                <a xlink:href="#openPackaging" id="tooltipmodal">
                   <text class="tooltiptext" transform="translate(2202.774,654.705)">Packaging</text>
                   <circle id="packaging" class="click" cx="2202.774" cy="605.956" r="10" stroke="black" stroke-width="7" fill="white" />
                 </a>
@@ -764,7 +764,7 @@
 
     <div>
       <a href="#close" title="Close" class="close">X</a>
-      <img class="medium-large" src="./resources/images/bjp-logo.jpg" alt="">
+      <img src="./resources/images/bjp-logo.jpg" alt="">
       <h2>Ballet Juvenil Puertorriqueño</h2>
       <p></p>
     </div>
@@ -801,7 +801,7 @@
 
       <div>
         <a href="#close" title="Close" class="close">X</a>
-        <img class="medium-large" src="./resources/images/practdocente.jpg">
+        <img src="./resources/images/practdocente.jpg">
         <h2>UNIVERSITY OF PUERTO RICO Río Piedras – San Juan, PR</h2>
         <h4>Teaching Practice</h4>
         <h4>Visual Arts Education</h4>
@@ -862,7 +862,7 @@
     <div id="openDrawing" class="modalDialog">
       <div>
         <a href="#close" title="Close" class="close">X</a>
-        <img class="large-medium" src="./resources/images/drawing.jpg" alt="">
+        <img src="./resources/images/drawing.jpg" alt="">
       </div>
     </div>
 
@@ -876,14 +876,14 @@
     <div id="openPainting" class="modalDialog">
       <div>
         <a href="#close" title="Close" class="close">X</a>
-        <img class="large-medium" src="./resources/images/painting.jpg" alt="">
+        <img src="./resources/images/painting.jpg" alt="">
       </div>
     </div>
 
     <div id="openPhotography" class="modalDialog">
       <div>
         <a href="#close" title="Close" class="close">X</a>
-        <img class="large-medium" src="./resources/images/photography.jpg" alt="">
+        <img src="./resources/images/photography.jpg" alt="">
       </div>
     </div>
 
@@ -904,7 +904,7 @@
     <div id="openFlyers" class="modalDialog">
       <div>
         <a href="#close" title="Close" class="close">X</a>
-        <img class="medium-large" src="./resources/images/flayer.png" alt="">
+        <img src="./resources/images/flayer.png" alt="">
       </div>
     </div>
 
@@ -918,14 +918,14 @@
     <div id="openLayout" class="modalDialog">
       <div>
         <a href="#close" title="Close" class="close">X</a>
-        <img class="medium-large"  src="./resources/images/LayoutSkills.jpg" alt="">
+        <img src="./resources/images/LayoutSkills.jpg" alt="">
       </div>
     </div>
 
     <div id="openPoster" class="modalDialog">
       <div>
         <a href="#close" title="Close" class="close">X</a>
-        <img class="medium-large"  src="./resources/images/MoviePoster.png" alt="">
+        <img src="./resources/images/MoviePoster.png" alt="">
       </div>
     </div>
 
@@ -933,21 +933,21 @@
     <div id="openEnvelopes" class="modalDialog">
       <div>
         <a href="#close" title="Close" class="close">X</a>
-        <img class="large-medium"  src="./resources/images/Envelope.jpg" alt="">
+        <img  src="./resources/images/Envelope.jpg" alt="">
       </div>
     </div>
 
     <div id="openLetterheads" class="modalDialog">
       <div>
         <a href="#close" title="Close" class="close">X</a>
-        <img class="medium-large" src="./resources/images/Letterhead.png" alt="">
+        <img src="./resources/images/Letterhead.png" alt="">
       </div>
     </div>
 
     <div id="openBusinessCards" class="modalDialog">
       <div>
         <a href="#close" title="Close" class="close">X</a>
-        <img class="large-medium" src="./resources/images/BuissnesCards.jpg" alt="">
+        <img src="./resources/images/BuissnesCards.jpg" alt="">
       </div>
     </div>
 
@@ -961,7 +961,14 @@
     <div id="openPostcards" class="modalDialog">
       <div>
         <a href="#close" title="Close" class="close">X</a>
-        <img class="medium-large" src="./resources/images/PostCards.jpg" alt="">
+        <img src="./resources/images/PostCards.jpg" alt="">
+      </div>
+    </div>
+
+    <div id="openPackaging" class="modalDialog">
+      <div>
+        <a href="#close" title="Close" class="close">X</a>
+        <img src="./resources/images/packaging.jpg" alt="">
       </div>
     </div>
 
