--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
               <!-- PR Section Starts -->
 
               <g class="life-stop" x="80.746" y="385.809">
-                  <circle id="b-date1" class="click" cx="80.746" cy="385.809" r="55" stroke="black" stroke-width="7" fill="white" />
+                  <circle id="b-date1" class="click" cx="80.746" cy="385.809" r="45" stroke="black" stroke-width="7" fill="white" />
               </g>
 
               <g class="life-stop" x="80.746" y="385.809">
                 <a xlink:href="" >
-                  <circle id="b-date2" class="click" cx="80.746" cy="385.809" r="35" stroke="black" stroke-width="7" fill="white" />
+                  <circle id="b-date2" class="click" cx="80.746" cy="385.809" r="25" stroke="black" stroke-width="7" fill="white" />
                 </a>
               </g>
 
@@ -77,14 +77,14 @@
                 </a>
               </g>
 
-              <g class="life-stop" x="741.474" y="385.809">
+              <g class="life-stop" x="730.474" y="385.809">
                 <a xlink:href="" >
-                  <circle id="europe" class="click" cx="741.474" cy="385.809" r="15" stroke="black" stroke-width="7" fill="white" />
+                  <circle id="europe" class="click" cx="730.474" cy="385.809" r="15" stroke="black" stroke-width="7" fill="white" />
                 </a>
               </g>
 
               <g class="job-stop" x="818.582" y="385.809">
-                <a xlink:href="#" >
+                <a xlink:href="#openArtlic" >
                   <circle id="lic-arte-pr" class="click" cx="818.582" cy="385.809" r="15" stroke="white" stroke-width="7" fill="black" />
                 </a>
               </g>
@@ -95,15 +95,15 @@
                 </a>
               </g>
 
-              <g class="life-stop" x="1069.644" y="385.809">
+              <g class="life-stop" x="1033.831" y="385.809">
                 <a xlink:href="" >
-                  <circle id="dominicana" class="click" cx="1069.644" cy="385.809" r="15" stroke="black" stroke-width="7" fill="white" />
+                  <circle id="dominicana" class="click" cx="1033.831" cy="385.809" r="15" stroke="black" stroke-width="7" fill="white" />
                 </a>
               </g>
 
-              <g class="job-stop" x="1124.652" y="385.809">
-                <a xlink:href="#" >
-                  <circle id="lic-tecno-pr" class="click" cx="1124.652" cy="385.809" r="15" stroke="white" stroke-width="7" fill="black" />
+              <g class="job-stop" x="1101.753" y="385.809">
+                <a xlink:href="#openTechlic" >
+                  <circle id="lic-tecno-pr" class="click" cx="1101.753" cy="385.809" r="15" stroke="white" stroke-width="7" fill="black" />
                 </a>
               </g>
 
@@ -163,7 +163,8 @@
                 </a>
               </g>
 
-              <g class="education-stop" x="706.327" y="266.818">
+              <!-- <g class="education-stop" x="706.327" y="266.818"> -->
+              <g class="education-stop" x="672.157" y="672.157">
                 <a xlink:href="#openupr-rp" >
                   <image id="upr-rp" x="672.157" y="248.817" xlink:href="./resources/images/UPRR-Stop.png" width="60" height="60" />
                 </a>
@@ -194,7 +195,7 @@
               </g>
 
               <g class="education-stop" x="1150.603" y="278.647">
-                <a xlink:href="#" >
+                <a xlink:href="#">
                   <circle id="pd-cdata" class="click" cx="1150.603" cy="278.647" r="15" stroke="black" stroke-width="7" fill="white" />
                 </a>
               </g>
@@ -226,14 +227,14 @@
               </g>
 
               <g class="education-stop" x="1894.521" y="487.908">
-                <a xlink:href="#" >
-                  <circle id="hcc" class="click" cx="1894.521" cy="487.908" r="20" stroke="black" stroke-width="7" fill="white" />
+                <a xlink:href="" >
+                  <image id="hcc" x="1864.986" y="460.462" xlink:href="./resources/images/HCC-Stop.png" width="50" height="50" />
                 </a>
               </g>
 
               <g class="education-stop" x="2123.876" y="487.908">
-                <a xlink:href="#" >
-                  <circle id="unc-ch" class="click" cx="2123.876" cy="487.908" r="15" stroke="black" stroke-width="7" fill="white" />
+                <a xlink:href="" >
+                  <image id="unc-ch" x="2115" y="473" xlink:href="./resources/images/UNC-Stop.png" width="30" height="30" />
                 </a>
               </g>
 
@@ -309,7 +310,7 @@
 
               <g class="job-stop" x="1101.068" y="489.014">
                 <a xlink:href="#" >
-                  <circle id="cdata" class="click" cx="1101.068" cy="489.014" r="20" stroke="black" stroke-width="7" fill="white" />
+                  <image id="cdata" x="1076.015" y="464.014" xlink:href="./resources/images/Humacao-Stop.png" width="60" height="60" />
                 </a>
               </g>
 
@@ -321,7 +322,7 @@
 
               <g class="job-stop" x="1226.64" y="489.014">
                 <a xlink:href="#" >
-                  <circle id="de2" class="click" cx="1226.64" cy="489.014" r="15" stroke="black" stroke-width="7" fill="white" />
+                  <image id="de-2" x="1206.64" y="469.014" xlink:href="./resources/images/DE-Stop.png" width="40" height="40" />
                 </a>
               </g>
 
@@ -334,7 +335,7 @@
               </g>
 
               <g class="job-stop" x="1573.96" y="276.011">
-                <a xlink:href="#" >
+                <a xlink:href="#openVolNuestras" >
                   <circle id="vol-nuestras" class="click" cx="1573.96" cy="276.011" r="15" stroke="white" stroke-width="7" fill="black" />
                 </a>
               </g>
@@ -407,7 +408,7 @@
               </g>
 
               <g class="tooltip" x="706.327" y="156.296">
-                <a xlink:href="#openArchitectural">
+                <a xlink:href="#openArchitectural" id="tooltipmodal">
                   <text class="tooltiptext" transform="translate(706.327,118)">Architectural Drafting</text>
                   <circle id="architecture" class="click" cx="706.327" cy="156.296" r="15" stroke="black" stroke-width="7" fill="white" />
                 </a>
@@ -439,28 +440,28 @@
               </g>
 
               <g class="tooltip" x="1035.915" y="153.849">
-                <a xlink:href="#openDesign">
+                <a xlink:href="#openDesign" id="tooltipmodal">
                   <text class="tooltiptext" transform="translate(1035.915,118)">Design</text>
                   <circle id="design" class="click" cx="1035.915" cy="153.849" r="10" stroke="black" stroke-width="7" fill="white" />
                 </a>
               </g>
 
               <g class="tooltip" x="1088.082" y="153.849">
-                <a xlink:href="#openDrawing">
+                <a xlink:href="#openDrawing" id="tooltipmodal">
                   <text class="tooltiptext" transform="translate(1088.082,118)">Drawing</text>
                   <circle id="drawing" class="click" cx="1088.082" cy="153.849" r="10" stroke="black" stroke-width="7" fill="white" />
                 </a>
               </g>
 
               <g class="tooltip" x="1136.519" y="153.849">
-                <a xlink:href="#openSculpture">
+                <a xlink:href="#openSculpture" id="tooltipmodal">
                   <text class="tooltiptext" transform="translate(1136.519,118)">Sculpture</text>
                   <circle id="sculpture" class="click" cx="1136.519" cy="153.849" r="10" stroke="black" stroke-width="7" fill="white" />
                 </a>
               </g>
 
               <g class="tooltip" x="1187.772" y="153.849">
-                <a xlink:href="#openPainting">
+                <a xlink:href="#openPainting" id="tooltipmodal">
                   <text class="tooltiptext" transform="translate(1187.772,118)">Painting</text>
                   <circle id="painting" class="click" cx="1187.772" cy="153.849" r="10" stroke="black" stroke-width="7" fill="white" />
                 </a>
@@ -472,7 +473,7 @@
               </g>
 
               <g class="tooltip" x="1241.414" y="213.049">
-                <a xlink:href="#openPhotography">
+                <a xlink:href="#openPhotography" id="tooltipmodal">
                   <text class="tooltiptext" id="anchor-start" transform="translate(1267.656,220)">Photography</text>
                   <circle id="photography" class="click" cx="1241.414" cy="213.049" r="10" stroke="black" stroke-width="7" fill="white" />
                 </a>
@@ -481,7 +482,7 @@
               <!-- US Section Starts -->
 
               <g class="tooltip" x="1498.743" y="551.468">
-                <a xlink:href="#openLogo">
+                <a xlink:href="#openLogo" id="tooltipmodal">
                 <text class="tooltiptext" id="anchor-end" transform="translate(1470.218,561.468)">Logos</text>
                 <circle id="logos" class="click" cx="1498.743" cy="551.468" r="10" stroke="black" stroke-width="7" fill="white" />
               </a>
@@ -510,70 +511,70 @@
               </g>
 
               <g class="tooltip" x="1699.895" y="605.956">
-                <a xlink:href="#openLayout">
+                <a xlink:href="#openLayout" id="tooltipmodal">
                   <text class="tooltiptext" transform="translate(1699.895,654.705)">Layout</text>
                   <circle id="layout" class="click" cx="1699.895" cy="605.956" r="10" stroke="black" stroke-width="7" fill="white" />
                 </a>
               </g>
 
               <g class="tooltip" x="1750.182" y="605.956">
-                <a xlink:href="#openBrochures">
+                <a xlink:href="#openBrochures" id="tooltipmodal">
                   <text class="tooltiptext" transform="translate(1750.182,654.705)">Brochures</text>
                   <circle id="brochures" class="click" cx="1750.182" cy="605.956" r="10" stroke="black" stroke-width="7" fill="white" />
                 </a>
               </g>
 
               <g class="tooltip" x="1800.47" y="605.956">
-                <a xlink:href="#openFlyers">
+                <a xlink:href="#openFlyers" id="tooltipmodal">
                   <text class="tooltiptext" transform="translate(1800.47,654.705)">Flyers</text>
                   <circle id="flyers" class="click" cx="1800.47" cy="605.956" r="10" stroke="black" stroke-width="7" fill="white" />
                 </a>
               </g>
 
               <g class="tooltip" x="1850.758" y="605.956">
-                <a xlink:href="#openEnvelopes" >
+                <a xlink:href="#openEnvelopes" id="tooltipmodal">
                   <text class="tooltiptext" transform="translate(1850.758,654.705)">Envelopes</text>
                   <circle id="envelopes" class="click" cx="1850.758" cy="605.956" r="10" stroke="black" stroke-width="7" fill="white" />
                 </a>
               </g>
 
               <g class="tooltip" x="1901.046" y="605.956">
-                <a xlink:href="#openLetterheads" >
+                <a xlink:href="#openLetterheads" id="tooltipmodal">
                   <text class="tooltiptext" transform="translate(1901.046,654.705)">Letterheads</text>
                   <circle id="letterheads" class="click" cx="1901.046" cy="605.956" r="10" stroke="black" stroke-width="7" fill="white" />
                 </a>
               </g>
 
               <g class="tooltip" x="1951.334" y="605.956">
-                <a xlink:href="#openBusinessCards">
+                <a xlink:href="#openBusinessCards" id="tooltipmodal">
                   <text class="tooltiptext" transform="translate(1951.334,654.705)">Buissness Cards</text>
                   <circle id="business-cards" class="click" cx="1951.334" cy="605.956" r="10" stroke="black" stroke-width="7" fill="white" />
                 </a>
               </g>
 
               <g class="tooltip"  x="2001.622" y="605.956">
-                <a xlink:href="#openTypes">
+                <a xlink:href="#openTypes" id="tooltipmodal">
                   <text class="tooltiptext" transform="translate(2001.622,654.705)">Typography</text>
                   <circle id="typography" class="click" cx="2001.622" cy="605.956" r="10" stroke="black" stroke-width="7" fill="white" />
                 </a>
               </g>
 
               <g class="tooltip" x="2051.91" y="605.956">
-                <a xlink:href="#openBookCover">
+                <a xlink:href="#openBookCover" id="tooltipmodal">
                   <text class="tooltiptext" transform="translate(2051.91,654.705)">Book Covers</text>
                   <circle id="bookcover" class="click" cx="2051.91" cy="605.956" r="10" stroke="black" stroke-width="7" fill="white" />
                 </a>
               </g>
 
               <g class="tooltip"  x="2102.198" y="605.956">
-                <a xlink:href="#openPostcards" >
+                <a xlink:href="#openPostcards" id="tooltipmodal">
                   <text class="tooltiptext" transform="translate(2102.198,654.705)">Postcards</text>
                   <circle id="postcards" class="click" cx="2102.198" cy="605.956" r="10" stroke="black" stroke-width="7" fill="white" />
                 </a>
               </g>
 
               <g class="tooltip" x="2152.486" y="605.956">
-                <a xlink:href="#openPoster">
+                <a xlink:href="#openPoster" id="tooltipmodal">
                   <text class="tooltiptext" transform="translate(2152.486,654.705)">Posters</text>
                   <circle id="posters" class="click" cx="2152.486" cy="605.956" r="10" stroke="black" stroke-width="7" fill="white" />
                 </a>
@@ -744,8 +745,8 @@
 
     <div>
       <a href="#close" title="Close" class="close">X</a>
-      <h2>Elementary School</h2>
-      <p></p>
+      <h4>Elementary School</h4>
+      <h2>Escuela Parcelas Coco - Salinas, PR</h2>
     </div>
 
   </div>
@@ -754,8 +755,9 @@
 
     <div>
       <a href="#close" title="Close" class="close">X</a>
-      <h2>Middle School</h2>
-      <p></p>
+      <img src="./resources/images/MiddleSchool-Crtf.jpg" alt="">
+      <h4>Middle School</h4>
+      <h2>Luis Muños Rivera - Salinas, PR</h2>
     </div>
 
   </div>
@@ -764,9 +766,9 @@
 
     <div>
       <a href="#close" title="Close" class="close">X</a>
-      <img src="./resources/images/bjp-logo.jpg" alt="">
-      <h2>Ballet Juvenil Puertorriqueño</h2>
-      <p></p>
+      <img src="./resources/images/BJP-Crtf.jpg" alt="">
+      <h4>Ballet Juvenil Puertorriqueño</h4>
+      <h2>Dancer</h2>
     </div>
 
   </div>
@@ -775,9 +777,32 @@
 
     <div>
       <a href="#close" title="Close" class="close">X</a>
-      <h2>High School</h2>
-      <p></p>
+      <img src="./resources/images/HighSchool-Crtf.jpg" alt="">
+      <h4>High School</h4>
+      <h2>Escuela Superior Stella Márquez - Salinas, PR</h2>
     </div>
+
+  </div>
+
+  <div id="openArtlic" class="modalDialog">
+
+  <div>
+    <a href="#close" title="Close" class="close">X</a>
+    <img src="./resources/images/ArtTeach-Crtf.jpg" alt="">
+    <h4>Teacher Life Certificate: Fine Arts Teacher, Visual Arts</h4>
+    <h2>Puerto Rico Department of Education - PR</h2>
+  </div>
+
+  </div>
+
+  <div id="openTechlic" class="modalDialog">
+
+  <div>
+    <a href="#close" title="Close" class="close">X</a>
+    <img src="./resources/images/TechEdu-Crtf.jpg" alt="">
+    <h4>Teacher Certificate: Educational Technology Specialist</h4>
+    <h2>Puerto Rico Department of Education - PR</h2>
+  </div>
 
   </div>
 
@@ -838,6 +863,16 @@
         </ul>
       </div>
 
+    </div>
+
+    <div id="openVolNuestras" class="modalDialog">
+
+      <div>
+        <a href="#close" title="Close" class="close">X</a>
+        <img src="./resources/images/Vol-Nuestras.jpg">
+        <h4>Nuestras Raíces, Inc.</h4>
+        <h2>Volunteer</h2>
+      </div>
 
     </div>
 
