--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
                 </a>
               </g>
 
-              <g class="life-stop" x="524.018" y="176.83">
+              <g class="life-stop" x="523.485" y="178.941">
                 <a xlink:href="" >
-                  <circle id="mexico" class="click" cx="524.018" cy="176.83" r="15" stroke="black" stroke-width="7" fill="white" />
-                  <!-- <image id="ma-usa" x="509.018" y="158.353" xlink:href="./resources/images/mexico.png" width="50" height="50" /> -->
+                  <image id="mx-flag" x="503.485" y="158.941" xlink:href="./resources/images/mx.png" width="40" height="40" />
+                  <circle id="mexico" class="click" cx="523.485" cy="178.941" r="20" stroke="black" stroke-width="7" fill="none" />
                 </a>
               </g>
 
@@ -77,9 +77,25 @@
                 </a>
               </g>
 
-              <g class="life-stop" x="730.474" y="385.809">
+              <g class="life-stop" x="660.907" y="385.809">
                 <a xlink:href="" >
-                  <circle id="europe" class="click" cx="730.474" cy="385.809" r="15" stroke="black" stroke-width="7" fill="white" />
+                  <image id="esp-flag" x="640.907" y="365.809" xlink:href="./resources/images/esp.png" width="40" height="40" />
+                  <circle id="espana" class="click" cx="660.907" cy="385.809" r="20" stroke="black" stroke-width="7" fill="none" />
+                </a>
+              </g>
+
+              <g class="life-stop" x="702.157" y="385.809">
+                <a xlink:href="" >
+                  <image id="fr-flag" x="682.157" y="365.809" xlink:href="./resources/images/fr.png" width="40" height="40" />
+                  <circle id="france" class="click" cx="702.157" cy="385.809" r="20" stroke="black" stroke-width="7" fill="none" />
+                </a>
+              </g>
+
+
+              <g class="life-stop" x="742.857" y="385.809">
+                <a xlink:href="" >
+                  <image id="it-flag" x="722.857" y="365.809" xlink:href="./resources/images/it.png" width="40" height="40" />
+                  <circle id="italy" class="click" cx="742.857" cy="385.809" r="20" stroke="black" stroke-width="7" fill="none" />
                 </a>
               </g>
 
@@ -89,15 +105,17 @@
                 </a>
               </g>
 
-              <g class="life-stop" x="936.147" y="385.809">
+              <g class="life-stop" x="879.643" y="385.809">
                 <a xlink:href="" >
-                  <circle id="ny" class="click" cx="936.147" cy="385.809" r="15" stroke="black" stroke-width="7" fill="white" />
+                  <image id="us-flag" x="859.643" y="365.809" xlink:href="./resources/images/us.png" width="40" height="40" />
+                  <circle id="ny" class="click" cx="879.643" cy="385.809" r="20" stroke="black" stroke-width="7" fill="none" />
                 </a>
               </g>
 
-              <g class="life-stop" x="1033.831" y="385.809">
+              <g class="life-stop" x="1040.47" y="385.809">
                 <a xlink:href="" >
-                  <circle id="dominicana" class="click" cx="1033.831" cy="385.809" r="15" stroke="black" stroke-width="7" fill="white" />
+                  <image id="dr-flag" x="1020.47" y="365.809" xlink:href="./resources/images/dr.png" width="40" height="40" />
+                  <circle id="dominicana" class="click" cx="1040.47" cy="385.809" r="20" stroke="black" stroke-width="7" fill="none" />
                 </a>
               </g>
 
@@ -127,13 +145,15 @@
 
               <g class="life-stop" x="1643.891" y="385.809">
                 <a xlink:href="" >
-                  <circle id="colombia" class="click" cx="1643.891" cy="385.809" r="15" stroke="black" stroke-width="7" fill="white" />
+                  <image id="col-flag" x="1623.891" y="365.809" xlink:href="./resources/images/col.png" width="40" height="40" />
+                  <circle id="colombia" class="click" cx="1643.891" cy="385.809" r="20" stroke="black" stroke-width="7" fill="none" />
                 </a>
               </g>
 
               <g class="life-stop" x="1759.934" y="385.809">
                 <a xlink:href="" >
-                  <circle id="canada" class="click" cx="1759.934" cy="385.809" r="15" stroke="black" stroke-width="7" fill="white" />
+                  <image id="col-flag" x="1739.934" y="365.809" xlink:href="./resources/images/can.png" width="40" height="40" />
+                  <circle id="canada" class="click" cx="1759.934" cy="385.809" r="20" stroke="black" stroke-width="7" fill="none" />
                 </a>
               </g>
 
@@ -145,9 +165,17 @@
                   <image id="nc-usa" x="1979.097" y="359.93" xlink:href="./resources/images/NC.png" width="50" height="50" />
               </g>
 
-              <g class="life-stop" x="2111.914" y="385.809">
+              <g class="life-stop" x="2066.935" y="385.809">
                 <a xlink:href="" >
-                  <circle id="nc-co" class="click" cx="2111.914" cy="385.809" r="15" stroke="black" stroke-width="7" fill="white" />
+                  <image id="nc-map" x="2051.935" y="370.809" xlink:href="./resources/images/nc-map.png" width="30" height="30" />
+                  <circle id="nc-co" class="click" cx="2066.935" cy="385.809" r="15" stroke="black" stroke-width="3.5" fill="none" />
+                </a>
+              </g>
+
+              <g class="life-stop" x="2134.449" y="385.809">
+                <a xlink:href="" >
+                  <image id="col-map" x="2119.449" y="370.809" xlink:href="./resources/images/co-map.png" width="30" height="30" />
+                  <circle id="co-nc" class="click" cx="2134.449" cy="385.809" r="15" stroke="black" stroke-width="3.5" fill="none" />
                 </a>
               </g>
 
