--- a/index.html
+++ b/index.html
@@ -30,12 +30,13 @@
               <!-- PR Section Starts -->
 
               <g class="life-stop" x="80.746" y="385.809">
-                  <circle id="b-date1" class="click" cx="80.746" cy="385.809" r="45" stroke="black" stroke-width="5" fill="white" />
+                  <circle id="b-date1" class="click" cx="80.756" cy="385.809" r="37.5" stroke="#f5be30" stroke-width="5" fill="#f5be30" />
               </g>
 
               <g class="life-stop" x="80.746" y="385.809">
                 <a xlink:href="" >
-                  <circle id="b-date2" class="click" cx="80.746" cy="385.809" r="25" stroke="black" stroke-width="5" fill="white" />
+                  <image id="pr-flag" x="50.756" y="355.809" xlink:href="./resources/images/pr-flag.png" width="60" height="60" />
+                  <circle id="b-date2" class="click" cx="80.746" cy="385.809" r="30" stroke="black" stroke-width="5" fill="none" />
                 </a>
               </g>
 
@@ -47,8 +48,9 @@
               </g>
 
               <g class="life-stop" x="236.948" y="488.243">
-                <a xlink:href="" >
-                  <circle id="il-nj" class="click" cx="236.948" cy="488.243" r="15" stroke="black" stroke-width="5" fill="white" />
+                <a xlink:href="">
+                  <image id="us-flag" x="216.948" y="468.243" xlink:href="./resources/images/us.png" width="40" height="40" />
+                  <circle id="il-nj" class="click" cx="236.948" cy="488.243" r="20" stroke="black" stroke-width="5" fill="none" />
                 </a>
               </g>
 
@@ -61,7 +63,7 @@
               <g class="life-stop" x="521.826" y="385.809">
                 <a xlink:href="#openBJP">
                   <image id="mx-flag" x="501.183" y="365.809" xlink:href="./resources/images/bjp-logo.png" width="40" height="40" />
-                  <circle id="bjp" class="click" cx="521.826" cy="385.809" r="20" stroke="black" stroke-width="2.5" fill="none" />
+                  <circle id="bjp" class="click" cx="521.826" cy="385.809" r="20" stroke="black" stroke-width="5" fill="none" />
                 </a>
               </g>
 
@@ -102,7 +104,7 @@
 
               <g class="job-stop" x="818.582" y="385.809">
                 <a xlink:href="#openArtlic" >
-                  <circle id="lic-arte-pr" class="click" cx="818.582" cy="385.809" r="15" stroke="white" stroke-width="5" fill="black" />
+                  <circle id="lic-arte-pr" class="click" cx="818.582" cy="385.809" r="15" stroke="#f5bf31" stroke-width="5" fill="white" />
                 </a>
               </g>
 
@@ -122,13 +124,19 @@
 
               <g class="job-stop" x="1101.753" y="385.809">
                 <a xlink:href="#openTechlic" >
-                  <circle id="lic-tecno-pr" class="click" cx="1101.753" cy="385.809" r="15" stroke="white" stroke-width="5" fill="black" />
+                  <circle id="lic-tecno-pr" class="click" cx="1101.753" cy="385.809" r="15" stroke="#f5bf31" stroke-width="5" fill="white" />
                 </a>
               </g>
 
-              <g class="life-stop" x="1314.634" y="326.894">
+              <g class="life-stop" x="1370" y="385.809">
 
-                    <image id="move-usa" class="click" x="1314.634" y="326.894" xlink:href="./resources/images/maleta.png" width="100" height="100" />
+
+              </g>
+
+              <g class="life-stop" x="1370" y="385.809">
+                    <image id="move-bandera" class="click" x="1340" y="355.95" xlink:href="./resources/images/us.png" width="60" height="60" />
+                    <image id="move-maleta" class="click" x="1340" y="355.95" xlink:href="./resources/images/maleta.png" width="60" height="60" />
+                    <circle id="move" class="click" cx="1370" cy="385.95" r="30" stroke="black" stroke-width="5" fill="none" />
 
               </g>
 
@@ -138,9 +146,10 @@
                 <image id="ma-usa" x="1456.116" y="359.93" xlink:href="./resources/images/MA.png" width="50" height="50" />
               </g>
 
-              <g class="life-stop" x="1573.917" y="385.809">
-                <a xlink:href="" >
-                  <circle id="nuestras" class="click" cx="1573.917" cy="385.809" r="15" stroke="black" stroke-width="5" fill="white" />
+              <g class="life-stop" x="1575.401" y="385.809">
+                <a xlink:href="">
+                  <image id="nuestras-logo" x="1560.401" y="370.809" xlink:href="./resources/images/nuestras-logo.png" width="30" height="30" />
+                  <circle id="nuestras" class="click" cx="1575.401" cy="385.809" r="17.5" stroke="#f5be30" stroke-width="5" fill="none" />
                 </a>
               </g>
 
@@ -249,27 +258,31 @@
                 </a>
               </g>
 
-              <g class="education-stop" x="1759.934" y="487.908">
+              <g class="education-stop" x="1755.399" y="487.908">
                 <a xlink:href="#" >
-                  <image id="scsu" x="1730.399" y="460.462" xlink:href="./resources/images/scsu-logo.png" width="50" height="50" />
+                  <image id="scsu-logo" x="1730.399" y="464.014" xlink:href="./resources/images/scsu-logo.png" width="50" height="50" />
+                  <circle id="hcc" class="click" cx="1755.399" cy="489.014" r="25" stroke="#2c438f" stroke-width="5" fill="none" />
                 </a>
               </g>
 
-              <g class="education-stop" x="1894.521" y="487.908">
+              <g class="education-stop" x="1889.986" y="489.014">
                 <a xlink:href="" >
-                  <image id="hcc" x="1864.986" y="460.462" xlink:href="./resources/images/hcc-logo.png" width="50" height="50" />
+                  <image id="hcc-logo" x="1865.612" y="464.014" xlink:href="./resources/images/hcc-logo.png" width="50" height="50" />
+                  <circle id="hcc" class="click" cx="1889.986" cy="489.014" r="25" stroke="#1eb04d" stroke-width="5" fill="none" />
                 </a>
               </g>
 
               <g class="education-stop" x="2123.876" y="487.908">
                 <a xlink:href="" >
-                  <image id="unc-ch" x="2115" y="473" xlink:href="./resources/images/unc-logo.png" width="30" height="30" />
+                  <image id="uncch-logo" x="2115" y="473" xlink:href="./resources/images/unc-logo.png" width="30" height="30" />
+                  <circle id="unc-courses" class="click" cx="2130" cy="488" r="17.5" stroke="#559fd3" stroke-width="5" fill="none" />
                 </a>
               </g>
 
               <g class="education-stop" x="2190.934" y="487.908">
-                <a xlink:href="#" >
-                  <circle id="codecademy" class="click" cx="2190.934" cy="487.908" r="15" stroke="black" stroke-width="5" fill="white" />
+                <a xlink:href="">
+                  <image id="codecademy-logo" x="2175.934" y="473" xlink:href="./resources/images/codecademy-logo.png" width="30" height="30" />
+                  <circle id="codecademy" class="click" cx="2190.934" cy="487.908" r="17.5" stroke="#204056" stroke-width="5" fill="none" />
                 </a>
               </g>
 
@@ -367,20 +380,21 @@
               <g class="job-stop" x="1575.401" y="276.011">
                 <a xlink:href="#openVolNuestras">
                   <image id="nuestras-logo" x="1560.401" y="261.011" xlink:href="./resources/images/nuestras-logo.png" width="30" height="30" />
+                  <circle id="nuestras-vol" class="click" cx="1575.401" cy="276.011" r="17.5" stroke="#d61f26" stroke-width="5" fill="none" />
                 </a>
               </g>
 
               <g class="job-stop" x="1643.891" y="276.011">
                 <a xlink:href="">
                   <image id="girlsinc-logo" x="1623.891" y="256.011" xlink:href="./resources/images/girlsinc-logo.png" width="40" height="40" />
-                  <circle id="girlsinc" class="click" cx="1643.891" cy="276.011" r="20" stroke="black" stroke-width="5" fill="none" />
+                  <circle id="girlsinc" class="click" cx="1643.891" cy="276.011" r="20" stroke="#ed1c50" stroke-width="5" fill="none" />
                 </a>
               </g>
 
               <g class="job-stop" x="1759.934" y="276.011">
                 <a xlink:href="">
                   <image id="aces-logo" x="1739.934" y="256.011" xlink:href="./resources/images/aces-logo.png" width="40" height="40" />
-                  <circle id="aces" class="click" cx="1759.934" cy="276.011" r="20" stroke="black" stroke-width="2.5" fill="none" />
+                  <circle id="aces" class="click" cx="1759.934" cy="276.011" r="20" stroke="#235f8d" stroke-width="5" fill="none" />
                 </a>
               </g>
 
@@ -391,21 +405,25 @@
                 </a>
               </g>
 
-              <g class="job-stop" x="1996.729" y="261.011">
+              <g class="job-stop" x="2011.729" y="276.011">
                 <a xlink:href="">
                   <image id="habitat-logo" x="1996.729" y="261.011" xlink:href="./resources/images/habitat-logo.png" width="30" height="30" />
+                  <circle id="habitat" class="click" cx="2011.729" cy="276.011" r="17.5" stroke="#d61f26" stroke-width="5" fill="none" />
                 </a>
               </g>
 
               <g class="job-stop" x="2071.468" y="276.011">
                 <a xlink:href="#" >
-                  <image id="kenan-flagler" x="2046.447" y="251.011" xlink:href="./resources/images/unc-logo.png" width="50" height="50" />
+                  <image id="unc-logo" x="2046.447" y="251.011" xlink:href="./resources/images/unc-logo.png" width="50" height="50" />
+                  <circle id="kenan-flagler" class="click" cx="2071.468" cy="276.011" r="25" stroke="#559fd3" stroke-width="5" fill="none" />
+
                 </a>
               </g>
 
-              <g class="job-stop" x="2115.449" y="261.011">
+              <g class="job-stop" x="2134.449" y="261.011">
                 <a xlink:href="">
                   <image id="kc-logo" x="2119.449" y="261.011" xlink:href="./resources/images/kc-logo.png" width="30" height="30" />
+                  <circle id="KenanConnections" class="click" cx="2134.449" cy="276.011" r="17.5" stroke="#d61f26" stroke-width="5" fill="none" />
                 </a>
               </g>
 
