--- a/index.html
+++ b/index.html
@@ -142,8 +142,9 @@
 
               <!-- US Section Starts -->
 
-              <g class="life-stop" x="1456.116" y="359.93">
-                <image id="ma-usa" x="1456.116" y="359.93" xlink:href="./resources/images/MA.png" width="50" height="50" />
+              <g class="life-stop" x="1481.116" y="384.93">
+                <image id="ma-usa" x="1456.116" y="359.93" xlink:href="./resources/images/ma-map.png" width="50" height="50" />
+                <circle id="mass" class="click" cx="1481.116" cy="384.93" r="25" stroke="black" stroke-width="5" fill="none" />
               </g>
 
               <g class="life-stop" x="1575.401" y="385.809">
@@ -162,17 +163,19 @@
 
               <g class="life-stop" x="1759.934" y="385.809">
                 <a xlink:href="" >
-                  <image id="col-flag" x="1739.934" y="365.809" xlink:href="./resources/images/can.png" width="40" height="40" />
+                  <image id="canada-flag" x="1739.934" y="365.809" xlink:href="./resources/images/can.png" width="40" height="40" />
                   <circle id="canada" class="click" cx="1759.934" cy="385.809" r="20" stroke="black" stroke-width="5" fill="none" />
                 </a>
               </g>
 
-              <g class="life-stop" x="1892.515" y="345.918">
-                  <image id="marrige" class="click" x="1892.515" y="345.918" xlink:href="./resources/images/wedding.png" width="70" height="70" />
+              <g class="life-stop" x="1931.046" y="345.918">
+                  <image id="rings-pic" class="click" x="1901.046" y="355.809" xlink:href="./resources/images/rings.png" width="60" height="60" />
+                  <circle id="marriage" class="click" cx="1931.046" cy="385.809" r="30" stroke="black" stroke-width="5" fill="none" />
               </g>
 
-              <g class="life-stop" x="1979.097" y="385.809">
-                  <image id="nc-usa" x="1979.097" y="359.93" xlink:href="./resources/images/NC.png" width="50" height="50" />
+              <g class="life-stop" x="2004.097" y="384.93">
+                  <image id="nc-usa" x="1979.097" y="359.93" xlink:href="./resources/images/nc-map.png" width="50" height="50" />
+                  <circle id="northcarolina" class="click" cx="2004.097" cy="384.93" r="25" stroke="black" stroke-width="5" fill="none" />
               </g>
 
               <g class="life-stop" x="2066.935" y="385.809">
@@ -195,9 +198,9 @@
 
               <!-- PR Section Starts -->
 
-              <g class="education-stop" x="634.483" y="309.79">
+              <g class="education-stop" x="613.835" y="288.196">
                 <a xlink:href="" >
-                  <circle id="upr-ponce" class="click" cx="634.483" cy="309.79" r="15" stroke="black" stroke-width="5" fill="white" />
+                  <image id="uprponce-logo" x="613.835" y="288.196" xlink:href="./resources/images/uprponce-logo.png" width="40" height="40" />
                 </a>
               </g>
 
