--- a/index.html
+++ b/index.html
@@ -783,6 +783,35 @@
 
           <!-- Professional Skills Line Stops Ends Here -->
 
+          <!-- Key Starts Here -->
+
+          <g class="keyInfo" x="162.314" y="558.852">
+              <text id="keyTitle" transform="translate(162.314,564.852)">Key</text>
+          </g>
+
+          <g class="keyInfo" x="97.006" y="605.086">
+              <text transform="translate(97.006,605.086)">Life Line</text>
+          </g>
+
+
+          <g class="keyInfo" x="97.006" y="634.008">
+              <text transform="translate(97.006,634.008)">Educational Line</text>
+          </g>
+
+          <g class="keyInfo" x="97.006" y="667.028">
+              <text transform="translate(97.006,667.028)">Professional Line</text>
+          </g>
+
+          <g class="keyInfo" x="97.006" y="697.172">
+              <text transform="translate(97.006,697.172)">Professional Skillset</text>
+          </g>
+
+          <g class="keyInfo" x="97.006" y="727.557">
+              <text transform="translate(97.006,727.557)">Arts &amp; Design Skillset</text>
+          </g>
+
+          <!-- Key Ends Here -->
+
         </svg>
 
       </div>
@@ -866,7 +895,7 @@
 
     <div id="openupr-rp" class="modalDialog">
 
-      <div>
+      <div class="modal-img">
         <a href="#close" title="Close" class="close">X</a>
         <img src="./resources/images/diploma-ba.jpg" alt="">
         <h2>UNIVERSITY OF PUERTO RICO Río Piedras – San Juan, PR</h2>
@@ -907,7 +936,7 @@
 
     <div id="openDE1" class="modalDialog">
 
-      <div>
+      <div class="modal-text">
         <a href="#close" title="Close" class="close">X</a>
         <h2>PUERTO RICO DEPARTMENT OF EDUCATION – San Juan, PR</h2>
         <h4>Art Teacher at Felipe Gutiérrez and Eleanor Roosevelt Elementary School</h4>
