--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
               <g class="life-stop" x="1370" y="385.809">
                     <image id="move-bandera" class="click" x="1340" y="355.95" xlink:href="./resources/images/us.png" width="60" height="60" />
-                    <image id="move-maleta" class="click" x="1340" y="355.95" xlink:href="./resources/images/maleta.png" width="60" height="60" />
+                    <!-- <image id="move-maleta" class="click" x="1340" y="355.95" xlink:href="./resources/images/maleta.png" width="60" height="60" /> -->
                     <circle id="move" class="click" cx="1370" cy="385.95" r="30" stroke="black" stroke-width="5" fill="none" />
               </g>
 
@@ -873,7 +873,7 @@
     <div class="modal-img">
       <a href="#close" title="Close" class="close">X</a>
       <img src="./resources/images/BJP-Crtf.jpg" alt="">
-      <h4>Ballet Juvenil Puertorriqueño</h4>
+      <h4>Bellet Juvenil Puertorriqueño</h4>
       <h2>Dancer</h2>
     </div>
 
