--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
             </g>
 
             <g class="tooltip" x="924.457" y="607.932">
-                <text class="tooltiptext" transform="translate(924.457,654.705)">Andragogy</text>
+                <text class="tooltiptext" transform="translate(924.457,654.705)">Adult Education</text>
                 <circle id="andragogy" class="click" cx="924.457" cy="607.932" r="10" stroke="black" stroke-width="5" fill="white" />
             </g>
 
@@ -903,7 +903,7 @@
 
   <div id="openTechlic" class="modalDialog">
 
-  <divclass="modal-img">
+  <div class="modal-img">
     <a href="#close" title="Close" class="close">X</a>
     <img src="./resources/images/TechEdu-Crtf.jpg" alt="">
     <h4>Teacher Certificate: Educational Technology Specialist</h4>
